About to implement Google Sign In

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_cards"
+        android:icon="@drawable/baseline_filter_none_black_24"
+        android:title="@string/title_cards" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_decks"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_decks" />
+
+    <item
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_profile" />
 
 </menu>
